# euler-rs

./: Cargo.toml  benches.rs
src/: lib.rs
src/core/: collatz.rs  digits.rs  fibonacci.rs  hexagonal.rs  lychrel.rs  mod.rs  palindrome.rs  pentagonal.rs  permutations.rs  poker.rs  primes.rs  reverse.rs  triangle.rs  ubig.rs
src/euler/: e00001.rs  e00002.rs  e00003.rs  e00004.rs  e00005.rs  e00006.rs  e00007.rs  e00008.rs  e00009.rs  e00010.rs  e00011.rs  e00012.rs  e00013.rs  e00014.rs  e00015.rs  e00016.rs  e00017.rs  e00018.rs  e00019.rs  e00020.rs  e00021.rs  e00022.rs  e00023.rs  e00024.rs  e00025.rs  e00026.rs  e00027.rs  e00028.rs  e00029.rs  e00030.rs  e00031.rs  e00032.rs  e00033.rs  e00034.rs  e00035.rs  e00036.rs  e00037.rs  e00038.rs  e00039.rs  e00040.rs  (+21 more)
