[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "euler-benches"
path = "benches.rs"
harness = false

[dependencies]
divan = "0.1.14"
num-bigint = "0.4.5"
num-traits = "0.2.19"